--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             elite: "https://buy.stripe.com/7sYdRa902egr0WI1hE4ko03"
         };
     </script>
-    <script src="/script.js" defer></script>
+    <script src="/script.js" type="module"></script>
 </body>
 </html>
 
